<resources>
    <string name="app_name" translatable="false">DADM</string>
    <string name="logo" translatable="false">Logo</string>
    <!--Common-->
    <string name="next">Siguiente</string>
    <string name="back">Regresar</string>
    <string name="send">Enviar</string>
    <string name="sex">Sexo</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="other">Otro</string>
    <string name="accept">Aceptar</string>
    <string name="movies">Películas</string>
    <string name="profile">Perfil</string>
    <string name="not_selected">Sin selección</string>
    <!--Activity Selection Component-->
    <string name="label_has_credit_card">¿Cuentas con tarjeta de crédito?</string>
    <string name="fragment_title">Ejemplo de Fragment</string>

    <!-- Módulo 4: Proyecto -->
    <string name="placeholder">Texto</string>
    <string name="username">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="firstName">Nombre(s)</string>
    <string name="lastName">Apellido(s)</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="termsAndConditions">Acepto los términos y condiciones</string>
    <string name="privacyPolicy">Acepto las políticas de privacidad</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="label_register">¿Aún no tienes una cuenta?</string>
    <string name="create_account">Crea una cuenta</string>
    <string name="login_username_empty">Introduzca su correo electrónico</string>
    <string name="login_password_empty">Introduzca su contraseña</string>
    <string name="login_success">Ha iniciado sesión exitosamente</string>
    <string name="login_password_wrong">Su contraseña es 12345678</string>
    <string name="register_firstname_empty">Introduzca su nombre</string>
    <string name="register_lastname_empty">Introduzca su apellido</string>
    <string name="register_username_empty">Introduzca su correo electrónico</string>
    <string name="register_username_invalid">Introduzca un correo electrónico válido</string>
    <string name="register_sex_empty">Seleccione su sexo</string>
    <string name="register_password_empty">Introduzca una contraseña</string>
    <string name="register_password_invalid">La contraseña debe contener al menos 8 caracteres</string>
    <string name="register_confirm_password_no_match">Confirme su contraseña. La contraseña no coincide</string>
    <string name="register_terms_and_cond_accept">Debe aceptar los términos y condiciones</string>
    <string name="register_privacy_policy_accept">Debe aceptar las Políticas de privacidad</string>
    <string name="register_success">Se ha registrado correctamente</string>
    <string name="logged_in_as">Ha iniciado sesión como %s</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logged_out">Ha cerrado su sesión correctamente</string>
    <string name="data_updated">Su información se ha actualizado</string>
</resources>