<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modulo4.proyecto.fragments.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/create_account"
        style="@style/TitleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/glTop"
        app:layout_constraintBottom_toBottomOf="@+id/glBottom"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        android:fillViewport="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/firstName"
                android:labelFor="@+id/etFirstName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/lastName"
                android:labelFor="@+id/etLastName"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                app:layout_constraintTop_toBottomOf="@+id/tvLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/username"
                android:labelFor="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/sex"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvSex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <RadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/woman" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other" />

            </RadioGroup>


            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/password"
                android:labelFor="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/rgSex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/confirmPassword"
                android:labelFor="@+id/etPasswordConfirm"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/tvPasswordConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/cbTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termsAndConditions"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/cbPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicy"
                app:layout_constraintTop_toBottomOf="@+id/cbTermsAndConditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textAllCaps="true"
                android:layout_marginVertical="50dp"
                app:layout_constraintTop_toBottomOf="@+id/cbPrivacyPolicy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>