<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modulo4.proyecto.fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_proyecto"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StaticText"
        android:layout_marginTop="80dp"
        android:text="@string/username"
        android:labelFor="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd" />

    <EditText
        android:id="@+id/etUsername"
        android:inputType="textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StaticText"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:labelFor="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd" />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ActionText"
        android:layout_marginTop="30dp"
        android:text="@string/label_register"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>