<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modulo4.proyecto.fragments.ProfileFragment">

    <ImageButton
        android:id="@+id/ibLogout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="10dp"/>

    <ImageButton
        android:id="@+id/ibEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibLogout"
        android:translationZ="10dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="5dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_person_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/firstName"
                android:labelFor="@+id/etFirstName"
                app:layout_constraintTop_toBottomOf="@+id/imgPhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:enabled="false"
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/lastName"
                android:labelFor="@+id/etLastName"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:enabled="false"
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@+id/tvLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/username"
                android:labelFor="@+id/etUsername"
                app:layout_constraintTop_toBottomOf="@+id/etLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:clickable="false"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/StaticText"
                android:layout_marginTop="30dp"
                android:text="@string/sex"
                app:layout_constraintTop_toBottomOf="@+id/etUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="false"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/woman" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/other" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>